--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.main {
+  background-color: grey;
+}
+
 .hidden {
   display: none !important;
 }
@@ -34,6 +38,7 @@ header i {
   text-align: center;
   font-family: 'Monster Hunter', sans-serif;
   padding: 1rem;
+  background-color: grey;
 }
 
 .monster-name h2 {
@@ -52,24 +57,43 @@ header i {
 }
 
 .mon-img {
-  width: 75%;
+  max-height: 550px;
+  width: 100%;
+  height: 100%;
   border: 5px solid black;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url('https://www.monsterhunter.com/world/sp/images/ecosystem/img_ecosystem_01_01.jpg');
 }
 
-.monster-details h1,
-.monster-details h2 {
+.monster-details h1 {
   text-align: center;
   color: black;
 }
 
+.monster-details h2 {
+  padding-left: 10px;
+}
+
 .monster-details span {
-  color: #94ca76;
+  color: #74b1c9;
+  font-family: 'Playfair Display', sans-serif;
 }
 
 a {
   color: #94ca76;
   font-size: xx-large;
+}
+
+.detail-img {
+  height: 100%;
+  width: 100%;
+}
+
+#monster-select .row {
+  flex-basis: 50%;
+}
+
+.monster-card {
+  background-color: grey;
 }
